--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "./src/server.js",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/server.js ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:run": "yarn sequelize db:migrate",
+    "migrate:revert": "yarn sequelize db:migrate:undo:all",
+    "seed:run": "yarn sequelize db:seed:all",
+    "seed:revert": "yarn sequelize db:seed:undo:all"
   },
   "husky": {
     "hooks": {
@@ -14,9 +19,13 @@
     }
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
