--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "ISC",
   "scripts": {
     "start": "node ./src/server.js ",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "migrate:run": "yarn sequelize db:migrate",
     "migrate:revert": "yarn sequelize db:migrate:undo:all",
     "seed:run": "yarn sequelize db:seed:all",
-    "seed:revert": "yarn sequelize db:seed:undo:all"
+    "seed:revert": "yarn sequelize db:seed:undo:all",
+    "pretest": "yarn migrate:run && yarn seed:run",
+    "test": "jest",
+    "postest": "yarn seed:revert && yarn migrate:revert"
   },
   "husky": {
     "hooks": {
@@ -21,6 +23,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
@@ -37,7 +40,9 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.0.9",
-    "prettier": "^2.2.1"
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   },
   "config": {
     "commitizen": {
